--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
 
 </head>
 
 <body>
-	<p id="woo">I love blackjack</p>
-
-	<!--Javascript-->
-	<script src="js/main.js"></script>
+	<p>I love blackjack?</p>
 </body>
 </html>
