--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-	<p>I love blackjack?</p>
+	<p id="woo">I love blackjack?</p>
+
+	<!--Javascript-->
+	<script src="js/main.js"></script>
 </body>
 </html>
