--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
-	<p id="woo">I love blackjack?</p>
-
+	<div id="container">
+    	<div id="sidebar">
+    	</div>
+    	<div id="content">
+    	</div>
+    	<div id="bottombar">
+    	</div>
+    </div>
 	<!--Javascript-->
 	<script src="js/main.js"></script>
 </body>
