--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>Blackjack Bralick</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
-
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -19,9 +18,21 @@
     	<div id="content">
     	</div>
     	<div id="bottombar">
+        <div class="container" style="height:100%">
+          <div class="col-md-4" id="button-wrapper">
+            <div id="hit">HIT</div>
+          </div>
+          <div class="col-md-4" id="button-wrapper">
+            <div id="stay">STAY</div>
+          </div>
+        </div> 
+        
     	</div>
     </div>
+
 	<!--Javascript-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
