--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Blackjack Bralick</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Milk is my favorite beverage">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -16,6 +14,14 @@
     	<div id="sidebar">
     	</div>
     	<div id="content">
+        <div class="container" style="position: relative; height: 100%;">
+          <div id="dealer-hand">
+            
+          </div>
+          <div id="player-hand">
+            
+          </div>
+        </div>
     	</div>
     	<div id="bottombar">
         <div class="container" style="height:100%">
