hit stay pop up

--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
     	<div id="content">
         <div class="container" style="position: relative; height: 100%;">
           <div id="dealer-hand">
-            
           </div>
           <div id="player-hand">
-            
+          </div>
+          <div id="results">
+            <h2 id="win">WINNER</h2>
+            <h2 id="lose">LOSER</h2>
+            <h2 id="draw">DRAW</h2>
+            <br/>
+          </div>
+          <div id="info">
+            <p id="context"></p>
+          </div>
+          <div id="next">
+            <div id="next-btn" href="#">
+              <span id="btn-txt">NEXT HAND</span>
+            </div>
           </div>
         </div>
     	</div>
