--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
 	<div id="container">
     	<div id="sidebar">
+        <div class="container" id="sidebar-container">
+            <p class="sidebar-text"> Dealer: <span id="dealer-value"></span></p>
+            <p class="sidebar-text"> Player: <span id="player-value"></span></p>
+        </div>
     	</div>
     	<div id="content">
         <div class="container" style="position: relative; height: 100%;">
@@ -29,7 +33,7 @@
             <p id="context"></p>
           </div>
           <div id="next">
-            <div id="next-btn" href="#">
+            <div id="next-btn">
               <span id="btn-txt">NEXT HAND</span>
             </div>
           </div>
